<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SaveActivity"
    android:orientation="vertical"
    android:background="@drawable/bg" >

    <TextView
        android:id="@+id/textViewRecog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="17dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="5dp" />

    <Button
        android:id="@+id/buttonWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="web"
        android:background="@drawable/blue_button"
        android:text="@string/launch"
        android:layout_marginBottom="5dp" />

    <Button
        android:id="@+id/buttonSMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendSMS"
        android:background="@drawable/blue_button"
        android:text="@string/SMS"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fileName" 
        android:layout_marginBottom="5dp" />

    <EditText
        android:id="@+id/editTextFileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="5dp"  >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonSaveFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveToFile"
        android:background="@drawable/blue_button"
        android:onClick="saveFile" 
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/buttonOpenFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openFile"
        android:background="@drawable/blue_button"
        android:text="@string/openFile"
        android:layout_marginBottom="5dp" />
    

</LinearLayout>
