<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity"
     android:background="@drawable/bg" >



		 <Button
		     android:id="@+id/buttonCamera"
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content"
		     android:onClick="launchCamera"
		     android:background="@drawable/blue_button"
		     android:text="@string/camera" 
		     android:layout_margin="5dp" 
		     />
		
		 <Button
		     android:id="@+id/buttonExtract"
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content"
		     android:onClick="extractText"
		     android:background="@drawable/blue_button"
		     android:text="@string/extract" 
		     android:layout_margin="5dp"  />
		
		 <Button
		     android:id="@+id/buttonSave"
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content"
		     android:onClick="saveText"
		     android:background="@drawable/blue_button"
		     android:text="@string/save"
		     android:layout_margin="5dp"  />
		
		 	   <ImageView android:id="@+id/imageView1"
			    		   android:layout_width="fill_parent"
			    		   android:layout_height="wrap_content"/>
		
		 <TextView
		     android:id="@+id/textViewRecog"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:textAppearance="?android:attr/textAppearanceLarge" />


</LinearLayout>
